@@ -74,6 +74,7 @@ namespace ev {
     FORK     = EV_FORK,
     ASYNC    = EV_ASYNC,
     EMBED    = EV_EMBED,
+#   undef ERROR // some systems stupidly #define ERROR
     ERROR    = EV_ERROR,
   };
 
